# terraria-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
game/include/: FrameOutput.h  Input.h  Window.h  animatedsprite.h  game.h  gameLogic.h  globals.h  graphics.h  input.h  player.h  sprite.h  transform.h  vec2.h
game/src/: Input.cpp  animatedsprite.cpp  game.cpp  gameLogic.cpp  graphics.cpp  input.cpp  main.cpp  player.cpp  sprite.cpp  transform.cpp  vec2.cpp
platform/include/: GameWindowBuffer.h  Input.h
platform/src/: GameWindowBuffer.cpp  Input.cpp  main.cpp
